form.elements should not contain image elements

https://bugs.webkit.org/show_bug.cgi?id=87834

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Web-Spec [1], Blink / Chromium and Gecko / Firefox.

Image elements should not appear in the form.elements as image element is not
mentioned in listed elements of specs.

[1] http://www.whatwg.org/specs/web-apps/current-work/multipage/forms.html#category-listed

Cherry-pick test: https://chromium.googlesource.com/chromium/src.git/+/5ab9146e05f7e315976e7066b29738dbd6d56f9e

* Source/WebCore/html/HTMLFormControlsCollection.cpp:
(HTMLFormControlsCollection::updateNamedElementCache): Remove 'imageElements' stuff
* LayoutTests/fast/dom/htmlformcontrolscollection-no-img.html: Add Test Case
* LayoutTests/fast/dom/htmlformcontrolscollection-no-img-expected.txt: Add Test Case Expectation
* LayoutTests/fast/forms/form-image-access-by-name-expected.txt: Rebaselined
* LayoutTests/fast/forms/form-image-access-by-name.html: Rebaselined